After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 152499 - crash when adding y-errors in an empty plot
crash when adding y-errors in an empty plot
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: Charting
git master
Other Linux
: High major
: ---
Assigned To: Emmanuel Pacaud
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2004-09-13 13:43 UTC by Adrian Custer
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Adrian Custer 2004-09-13 13:43:24 UTC
Gnumeric crashes when adding a y-error in an empty plot

1) new gnumeric
2) click on graph guru icon in the toolbar
3) click on xy plot
4) click on "forward" button
5) select "series" 
6) select the 'yerror' tab
7) on "error category" select absolute
-> crash
Comment 1 Adrian Custer 2004-09-13 13:46:28 UTC
sorry forgot the backtrace:

gdb gives:
Program received signal SIGSEGV, Segmentation fault.

Thread 1092934432 (LWP 5879)

  • #0 go_data_vector_get_len
    at go-data.c line 257
  • #1 gog_error_bar_get_minmax
    at gog-error-bar.c line 558
  • #2 gog_2d_plot_update
    at gog-xy.c line 131
  • #3 gog_object_update
    at gog-object.c line 642
  • #4 gog_object_update
    at gog-object.c line 635
  • #5 gog_object_update
    at gog-object.c line 635
  • #6 cb_graph_idle
    at gog-graph.c line 456
  • #7 g_child_watch_add
    from /usr/lib/libglib-2.0.so.0
  • #8 ??
  • #9 ??
  • #10 ??
    from /usr/lib/libglib-2.0.so.0
  • #11 ??
    from /usr/lib/libglib-2.0.so.0
  • #12 ??
  • #13 ??
    from /usr/lib/libglib-2.0.so.0
  • #14 g_main_context_dispatch
    from /usr/lib/libglib-2.0.so.0
  • #15 pthread_mutex_lock
    from /lib/tls/libpthread.so.0
  • #16 ??
    from /usr/lib/libglib-2.0.so.0
  • #17 ??
  • #18 ??
  • #19 ??
  • #20 g_main_context_acquire
    from /usr/lib/libglib-2.0.so.0
  • #21 ??
  • #23 ??
  • #24 ??
  • #25 ??
  • #26 ??
  • #27 __after_morecore_hook
    from /lib/tls/libc.so.6
  • #28 ??
    from /usr/lib/libglib-2.0.so.0
  • #29 ??
  • #30 ??
  • #31 ??
  • #32 fts_safe_changedir
    from /lib/tls/libc.so.6

Comment 2 Emmanuel Pacaud 2004-09-15 19:27:24 UTC
I've just commited a fix that prevents crashing. But does not solve the real issue.

It seems gog_series_is_valid return TRUE even if Y series is undefined, although
Y is GOG_SERIES_REQUIRED.
Comment 3 Emmanuel Pacaud 2004-09-15 20:10:08 UTC
Fixed in CVS.