http://bugzilla.gnome.org/show_bug.cgi?id=152499 check wether associated

2004-09-15  Emmanuel Pacaud <emmanuel.pacaud@univ-poitiers.fr>

	http://bugzilla.gnome.org/show_bug.cgi?id=152499
	* graph/gog-error-bar.c (gog_error_bar_get_minmax): check wether
	associated GogSeries is valid.